@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-20T08:12:29Z",
-  "count_outdated" : 7666,
-  "uniques_outdated" : 3323,
-  "count" : 7730,
+  "timestamp" : "2024-05-20T16:11:27Z",
+  "count_outdated" : 7677,
+  "uniques_outdated" : 3333,
+  "count" : 7731,
   "uniques" : 3375,
   "clones" : [
-    {
-      "timestamp": "2024-05-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 11 ],
-      "count_decinc": [ 10, 11 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 10 ],
-      "uniques_decinc": [ 9, 10 ]
-    },
     {
       "timestamp": "2024-05-08T00:00:00Z",
       "count": 1,
@@ -115,9 +106,9 @@
     },
     {
       "timestamp": "2024-05-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
