@@ -1,12 +1,7 @@
 {
   "count": 54,
-  "uniques": 31,
+  "uniques": 30,
   "clones": [
-    {
-      "timestamp": "2024-05-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-08T00:00:00Z",
       "count": 1,
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2024-05-20T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
